--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,68 @@
-#container {
+ion-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: relative;
+}
+
+.content-container{
+  margin: 5px;
+}
+
+.logo-container {
   text-align: center;
+  margin-top: 20px; /* Espaçamento acima do logo */
+}
 
+.logo {
+  width: 120px; /* Ajuste o tamanho do logo conforme necessário */
+}
+
+.app-name {
+  font-size: 32px;
+  margin-top: 10px;
+
+}
+
+ion-button{
+  --background: #FFBD59;
+  --background-activated: #FFCD82;
+  --background-hover: #C6964D;
+}
+
+.buttons-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 20px;
+  position: relative;
+  z-index: 1;
+}
+
+.button {
+  flex: 1;
+  margin: 0 5px;
+}
+
+
+.login-option {
+  text-align: center;
+  margin-top: auto; /* Move para a parte inferior da página */
+}
+
+.login-option a {
+  color: #ffbd59; /* Cor azul para o link */
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.trapezoid {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  bottom: 0;
+  width: 100%;
+  height: 50px; 
+  background-color: #ffbd59;
+  clip-path: polygon(25% 0%,69% 0%,96% 100%,0% 101%);
 }
